Fixed double scrollbar on pathway result page

--- a/js/styles/atlas.css
+++ b/js/styles/atlas.css
@@ -251,7 +251,6 @@ pre span.key {
   display: flex;
   flex-direction: column;
   min-width: 768px;
-  overflow: auto;
 }
 
 .flexed {
